fix: particles-js z-index

--- a/src/public/css/home.less
+++ b/src/public/css/home.less
@@ -1,10 +1,21 @@
 .contact {
   background-color: #32424a;
   height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  max-height: 300px;
   text-align: center;
+  position: relative;
+  index: 1;
+}
+
+#contact-texts {
+  position: absolute;
+  z-index: 99;
+  index: 5;
+  width: 50%;
+  height: 60%;
+  overflow: auto;
+  margin: auto;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
 
 .contact h1 {
@@ -211,10 +222,23 @@
     flex-direction: column;
   }
 
-.conference-banner {
-  flex-direction: column;
-  height: 150px;
-  text-align: center;
-}
+  .conference-banner {
+    flex-direction: column;
+    height: 150px;
+    text-align: center;
+  }
+  #contact-texts {
+    position: absolute;
+    z-index: 99;
+    index: 5;
+    width: 80%;
+    height: 60%;
+    overflow: auto;
+    margin: auto;
+    top: 0; left: 0; bottom: 0; right: 0;
 
+    h1 {
+      font-size: 40px;
+    }
+  }
 }
